--- a/index.html
+++ b/index.html
@@ -57,12 +57,8 @@
                     <img src="img/image (1).png" class="rounded-pill" width="273" height="331" loading="lazy">
                 </div>
                 <div class="col-5">
-                    <h2>O que foi a Tropicália?</h2>
-                    <p class="p-2">A Tropicália, também conhecida como Tropicalismo, foi um movimento cultural
-                        brasileiro que surgiu na década de 1960, tendo seu auge entre 1967 e 1968. Esse movimento
-                        abrangeu várias expressões artísticas, como a música, o cinema, o teatro e as artes plásticas, e
-                        teve como principal característica a mistura de elementos da cultura brasileira tradicional com
-                        influências estrangeiras, especialmente do rock e da música pop. Fonte: Site Toda a matéria</p>
+                    <h2>O que é sedentarismo?</h2>
+                    <p class="p-2"> O sedentarismo é a falta de atividades fisicas é a falta de exercicios que resulta no gasto de gorduras reduzidas. Uma pessoa é considerada sedentaria quando não consegue gastar no minimo 300 carorias por dia e 2.200 por semana. Estimase que o sedentarismo esteja relacionado com quase 14% das mortes no Brasil e 46% da população Brasileira seja sedentária. Fonte: Site Toda a matéria</p>
                 </div>
             </div>
         </section>
