--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 </div>
                 <div class="col-5">
                     <h2>O que é sedentarismo?</h2>
-                    <p class="p-2"> O sedentarismo é a falta de atividades fisicas que resulta no gasto de gorduras reduzidas. Uma pessoa é considerada sedentaria quando não consegue gastar no minimo 300 carorias por dia e 2.200 por semana. Estimase que o sedentarismo esteja relacionado com quase 14% das mortes no Brasil e 46% da população Brasileira seja sedentária. Fonte: Site Toda a matéria</p>
+                    <p class="p-2"> O sedentarismo é a falta de atividades fisicas que resulta no gasto de gorduras reduzidas. Uma pessoa é considerada sedentaria é quando não consegue gastar no minimo 300 carorias por dia e 2.200 por semana. Estimase que o sedentarismo esteja relacionado com quase 14% das mortes no Brasil e 46% da população Brasileira seja sedentária. Fonte: Site Toda a matéria</p>
                 </div>
             </div>
         </section>
