--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <title>Tropicália</title>
+    <title>sedentarismo</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.3/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="styles.css">
@@ -58,7 +58,8 @@
                 </div>
                 <div class="col-5">
                     <h2>O que é sedentarismo?</h2>
-                    <p class="p-2"> O sedentarismo é a falta de atividades fisicas que resulta no gasto de gorduras reduzidas. Uma pessoa é considerada sedentaria é quando não consegue gastar no minimo 300 carorias por dia e 2.200 por semana. Estimase que o sedentarismo esteja relacionado com quase 14% das mortes no Brasil e 46% da população Brasileira seja sedentária. Fonte: Site Toda a matéria</p>
+                    <p class="p-2"> O sedentarismo é a falta de atividades fisicas que resulta no gasto de gorduras reduzidas. Uma pessoa é considerada sedentaria 
+                        é quando não consegue gastar no minimo 300 carorias por dia e 2.200 por semana. Estimase que o sedentarismo esteja relacionado com quase 14% das mortes no Brasil e 46% da população Brasileira seja sedentária. Fonte: Site Toda a matéria</p>
                 </div>
             </div>
         </section>
