--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="pt-br">
 
@@ -5,7 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <title>sedentarismo</title>
+    <title>Tropicália</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.3/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="styles.css">
@@ -39,7 +40,7 @@
         <section id="inicio" class="my-5">
             <div class="inicio-fundo d-flex justify-content-between align-items-center">
                 <div class="esquerda-conteudo">
-                    <h1 class="display-4 text-white fst-italic fw-bold">Boas-vindas</h1>
+                    <h1 class="display-4 text-white fst-italic fw-bold">Boas-vindas a</h1>
                     <img src="img/logo-2.png" class="mb-3" width="563"
                         height="278" loading="lazy">
                     <a href="#tropicalia"
@@ -57,10 +58,9 @@
                     <img src="img/image (1).png" class="rounded-pill" width="273" height="331" loading="lazy">
                 </div>
                 <div class="col-5">
-                    <h2>O que é o sedentarismo?</h2>
-                    <p class="p-2"> O sedentarismo é a falta de atividades fisicas que resulta no gasto de gorduras reduzidas. Uma pessoa é considerada sedentaria 
-                        é quando não consegue gastar no minimo 300 carorias por dia e 2.200 por semana. Estimase que o sedentarismo esteja relacionado com quase 14% das mortes no Brasil e 46% da população
-                         Brasileira seja sedentária. Fonte: Site Toda a matéria</p>
+                    <h2>O sedentarismo é a falta de atividades fisicas que resulta no gasto de gorduras reduzidas. 
+                    Uma pessoa é considerada sedentaria é quando não consegue gastar no minimo 300 carorias por dia e 2.200 por semana.
+                     Estimase que o sedentarismo esteja relacionado com quase 14% das mortes no Brasil e 46% da população Brasileira seja sedentária. Fonte: Site Toda a matéria</p>
                 </div>
             </div>
         </section>
