--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
               </div>
         </section>
 
-        <section id="Sedentarismo" class="my-5 pt-6 secao-tropicalia" tabindex="0" aria-label="Seção explicativa sobre a tropicália">
+        <section id="Sedentarismo" class="my-5 pt-6 secao-sedentarismo" tabindex="0" aria-label="Seção explicativa sobre o sedentarismo">
             <div class="container d-flex align-items-center ">
                 <div class="col-4 d-flex justify-content-center ">
                     <img src="img/image (1).png" class="rounded-pill" width="273" height="331" loading="lazy">
