--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <div class="inicio-fundo d-flex justify-content-between align-items-center">
                 <div class="esquerda-conteudo">
                     <h1 class="display-4 text-white fst-italic fw-bold">Boas-vindas a</h1>
-                    <img src="img/logo-2.png" class="mb-3" width="563"
+                    <img src="img/d84e110ce9f06ece6cf3dce1b76f6598.jpg" class="mb-3" width="563"
                         height="278" loading="lazy">
                     <a href="#Sedentarismo"
                         class="btn btn-primary btn-lg botao-inicio fw-semibold">Quero
