--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                         class="btn btn-primary btn-lg botao-inicio fw-semibold">Quero
                         conhecer!</a>
                 </div>
-                <img src="img/dcfd708d57bd242c0393e80c8d7d7dfe.jpg" alt="A imagem apresenta uma menina fazendo exercicíos fisicos" title="Fazendo exercicíos - CC0 Domínio Público / Acervo Arquivo Nacional" class="img-fluid img-inicio">
+                <img src="img/dcfd708d57bd242c0393e80c8d7d7dfe-removebg-preview.png" alt="A imagem apresenta uma menina fazendo exercicíos fisicos" title="Fazendo exercicíos - CC0 Domínio Público / Acervo Arquivo Nacional" class="img-fluid img-inicio">
 
               </div>
         </section>
