--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <section id="Sedentarismo" class="my-5 pt-6 secao-sedentarismo" tabindex="0" aria-label="Seção explicativa sobre o sedentarismo">
             <div class="container d-flex align-items-center ">
                 <div class="col-4 d-flex justify-content-center ">
-                    <img src="img/image (1).png)" class="rounded-pill" width="273" height="331" loading="lazy">
+                    <img src="img/973341141930a9f0bdd42827f5cff84c.jpg" class="rounded-pill" width="273" height="331" loading="lazy">
                 </div>
                 <div class="col-5">
                     <h2>O sedentarismo é a falta de atividades fisicas que resulta no gasto de gorduras reduzidas. 
