--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                             class="img-fluid rounded-5" loading="lazy">
                     </div>
                     <div class="col-md-4">
-                        <img src="img/lossy-page1-640px-Jorge_Ben_e_o_Trio_Mocotó_no_Teatro_da_Lagoa,_1971.tif.jpg" class="img-fluid rounded-5"
+                        <img src="img/83da6bcaf3deb68e87af729015693a0f.jpg" class="img-fluid rounded-5"
                             loading="lazy">
                     </div>
                 </div>
